cluster/apps/firefly/importer/importer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: firefly
  name: firefly-importer
  labels:
    app: firefly-importer
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: firefly-importer
    tier: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: firefly
  name: firefly-importer
  labels:
    app: firefly-importer
spec:
  selector:
    matchLabels:
      app: firefly-importer
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-importer
        tier: frontend
    spec:
     
      containers:
      - image: fireflyiii/data-importer:version-0.7.0
        name: firefly-importer
        ports:
        - containerPort: 8080
          name: firefly
        imagePullPolicy: Always
        nodeSelector:
          kubernetes.io/arch: amd64
