cluster/apps/firefly/importer/importer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    #external-dns.alpha.kubernetes.io/hostname: firefly-importer.${SECRET_DOMAIN}
    #external-dns.alpha.kubernetes.io/ttl: "120" #optional
    #external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
  labels:
    name: firefly-importer-ingress
  namespace: firefly
  name: firefly-importer-ingress
spec:
  rules:
  - host: importer-firefly.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: firefly-importer
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - importer-firefly.${SECRET_DOMAIN}
